--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-log4j12-1.7.25.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/fastjson-1.2.13.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mqtt-client-1.14-uber.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/netty-all-4.1.22.Final.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
