--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/com/spirit/cdja/netty/TcpClient.java=UTF-8
 encoding//src/com/spirit/cdja/util/KafkaSimpleUtils.java=UTF-8
 encoding//src/com/spirit/cdja/util/KafkaUtils.java=UTF-8
 encoding/<project>=UTF-8
